--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_fonts: ^6.2.1
+  responsive_sizer: ^3.3.1
   flutter:
     sdk: flutter
 
@@ -75,17 +77,55 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Bebas Neue
+      fonts:
+        - asset: fonts/Bebas/BebasNeue-Regular.ttf
+          weight: 400
+
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins/Poppins-Thin.ttf
+          weight: 100
+        - asset: fonts/Poppins/Poppins-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Poppins/Poppins-Light.ttf
+          weight: 300
+        - asset: fonts/Poppins/Poppins-Regular.ttf
+          weight: 400
+        - asset: fonts/Poppins/Poppins-Medium.ttf
+          weight: 500
+        - asset: fonts/Poppins/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Poppins/Poppins-Bold.ttf
+          weight: 700
+        - asset: fonts/Poppins/Poppins-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Poppins/Poppins-Black.ttf
+          weight: 900
+        - asset: fonts/Poppins/Poppins-Italic.ttf
+          weight: 400
+          style: italic
+
+    - family: Inter
+      fonts:
+        - asset: fonts/Inter/Inter-Thin.ttf
+          weight: 100
+        - asset: fonts/Inter/Inter-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Inter/Inter-Light.ttf
+          weight: 300
+        - asset: fonts/Inter/Inter-Regular.ttf
+          weight: 400
+        - asset: fonts/Inter/Inter-Medium.ttf
+          weight: 500
+        - asset: fonts/Inter/Inter-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Inter/Inter-Bold.ttf
+          weight: 700
+        - asset: fonts/Inter/Inter-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Inter/Inter-Black.ttf
+          weight: 900
+
+  
