--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,8 @@ flutter:
   assets:
     - images/final.jpg
     - images/End.jpg
+    - images/google.png
+    - images/Apple-Logo.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
