--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^5.1.1
   percent_indicator: ^4.2.3
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
