--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.1.1
   percent_indicator: ^4.2.3
   pie_chart: ^5.4.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
