--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   percent_indicator: ^4.2.3
   pie_chart: ^5.4.0
   intl: ^0.19.0
+  google_generative_ai: ^0.4.3
 
 dev_dependencies:
   flutter_test:
