impl firebase google oauth

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flute",
-    "short_name": "flute",
+    "name": "ayumi",
+    "short_name": "ayumi",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
