--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flute
+name: ayumi
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,12 +37,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_sign_in: ^6.2.1
   firebase_auth: ^5.1.1
   percent_indicator: ^4.2.3
   pie_chart: ^5.4.0
   intl: ^0.19.0
   google_generative_ai: ^0.4.3
+  firebase_core: ^3.1.1
+  sign_in_button: ^3.2.0
+  provider: ^6.1.2
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
