--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flute" "\0"
+            VALUE "FileDescription", "ayumi" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flute" "\0"
+            VALUE "InternalName", "ayumi" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flute.exe" "\0"
-            VALUE "ProductName", "flute" "\0"
+            VALUE "OriginalFilename", "ayumi.exe" "\0"
+            VALUE "ProductName", "ayumi" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
