--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   color_hash: ^1.0.1
+  flutter_animated_button: ^2.0.3
 
 dev_dependencies:
   flutter_test:
