--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_auth: ^5.1.1
   percent_indicator: ^4.2.3
   pie_chart: ^5.4.0
   intl: ^0.19.0
   google_generative_ai: ^0.4.3
-  firebase_core: ^3.1.1
   sign_in_button: ^3.2.0
   provider: ^6.1.2
   path_provider: ^2.1.3
@@ -86,6 +84,7 @@ flutter:
     - images/End.jpg
     - images/google.png
     - images/Apple-Logo.png
+    - images/logo.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
