i did what i could

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   color_hash: ^1.0.1
   flutter_animated_button: ^2.0.3
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
