--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_animated_button: ^2.0.3
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.3
+  flutter_local_notifications: ^17.2.1+1
 
 dev_dependencies:
   flutter_test:
