--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,10 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/final.jpg
-    - images/End.jpg
-    - images/google.png
-    - images/Apple-Logo.png
-    - images/logo.png
+    - images/logo.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -105,30 +102,6 @@ flutter:
       fonts:
         - asset: fonts/Bebas/BebasNeue-Regular.ttf
           weight: 400
-
-    - family: Poppins
-      fonts:
-        - asset: fonts/Poppins/Poppins-Thin.ttf
-          weight: 100
-        - asset: fonts/Poppins/Poppins-ExtraLight.ttf
-          weight: 200
-        - asset: fonts/Poppins/Poppins-Light.ttf
-          weight: 300
-        - asset: fonts/Poppins/Poppins-Regular.ttf
-          weight: 400
-        - asset: fonts/Poppins/Poppins-Medium.ttf
-          weight: 500
-        - asset: fonts/Poppins/Poppins-SemiBold.ttf
-          weight: 600
-        - asset: fonts/Poppins/Poppins-Bold.ttf
-          weight: 700
-        - asset: fonts/Poppins/Poppins-ExtraBold.ttf
-          weight: 800
-        - asset: fonts/Poppins/Poppins-Black.ttf
-          weight: 900
-        - asset: fonts/Poppins/Poppins-Italic.ttf
-          weight: 400
-          style: italic
 
     - family: Inter
       fonts:
