--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   pie_chart: ^5.4.0
   intl: ^0.19.0
   google_generative_ai: ^0.4.3
-  sign_in_button: ^3.2.0
   provider: ^6.1.2
   path_provider: ^2.1.3
   isar: ^3.1.0+1
@@ -50,7 +49,7 @@ dependencies:
   flutter_animated_button: ^2.0.3
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.3
-  flutter_local_notifications: ^17.2.1+1
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
