--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   assets:
     - images/final.jpg
     - images/logo.jpg
+    - images/user.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
